--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,22 @@
 [package]
 edition = "2024"
-name = "rust-project-template"
+name = "simple-neural-network"
 version = "0.1.0"
 
 [features]
+default = []
+rayon = ["dep:rayon", "ndarray/rayon"]
 
 [dependencies]
-ndarray = {version = "0.16", features = ["rayon"]}
+ndarray = {version = "0.16", features = ["std", "serde"], default-features = false}
 ndarray-rand = "0.15"
 num-traits = "0.2"
 rand = "0.9"
+rayon = {version = "1.10", optional = true}
+serde = {version = "1.0.219", features = ["derive"]}
+
+[target.'cfg(feature = "rayon")'.dependencies]
+ndarray = {version = "0.16", features = ["std", "serde", "rayon"], default-features = false}
 
 [profile.release]
 codegen-units = 1
