--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,18 @@ name = "simple-neural-network"
 version = "0.1.0"
 
 [features]
-default = []
+default = ["f32"]
+f32 = []
+f64 = []
+gpu = ["tch"]
 rayon = ["dep:rayon", "ndarray/rayon"]
 
 [dependencies]
 ndarray = {version = "0.16", features = ["std", "serde"], default-features = false}
 ndarray-rand = "0.15"
-num-traits = "0.2"
-rand = "0.9"
 rayon = {version = "1.10", optional = true}
 serde = {version = "1.0.219", features = ["derive"]}
+tch = {version = "0.14", optional = true}
 
 [target.'cfg(feature = "rayon")'.dependencies]
 ndarray = {version = "0.16", features = ["std", "serde", "rayon"], default-features = false}
