--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ gpu = ["tch"]
 rayon = ["dep:rayon", "ndarray/rayon"]
 
 [dependencies]
+approx = "0.5"
 ndarray = {version = "0.16", features = ["std", "serde"], default-features = false}
 ndarray-rand = "0.15"
 rayon = {version = "1.10", optional = true}
 serde = {version = "1.0.219", features = ["derive"]}
-tch = {version = "0.14", optional = true}
+tch = {version = "0.20", optional = true}
 
 [target.'cfg(feature = "rayon")'.dependencies]
 ndarray = {version = "0.16", features = ["std", "serde", "rayon"], default-features = false}
@@ -29,6 +30,10 @@ opt-level = 3
 [profile.dev]
 incremental = true
 opt-level = 1
+
+[dev-dependencies]
+proptest = "1.5"
+serde_json = "1.0"
 
 [profile.dev.package."*"]
 opt-level = 3
